CLOUD-571 updated controller SDK used Removed redundant files and imports